--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "health-checkup-doctor",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "https://exp.zjubiomedit.com/hcdoc/",
   "dependencies": {
     "@emotion/core": "^10.1.1",
     "@emotion/react": "^11.7.0",
@@ -22,8 +23,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.2",
-    "react-router-dom": "^6.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-router-waiter": "^1.1.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
@@ -50,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
